examples/test/testpolicy8077.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8077
  namespace: namespace36
spec:
  podSelector:
    matchLabels:
      key0: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value4
          key6: value11
          key12: value14
      podSelector:
        matchLabels:
          key33: value42
          key1: value48
          key25: value42
